🔧Settings: CORS 설정 변경
* :wrench:Settings: CodeRabbit 설정 파일 추가

* ✨Feat: 기상청 OpenAPI를 통한 날씨 상태 응답 API 구현

* :rocket:Deploy: main branch에 push 될 때 CD 실행되도록 수정

* :sparkles:Feat: 기상청 OpenAPI를 통한 날씨 상태 응답 API 구현

* :sparkles:Feat: 예외처리 응답 코드 구현

* :wrench:Settings: 동기 처리 RestClient 설정 파일 추가

* :recycle:Refactor: HttpStatus 라이브러리 추가

* :wrench:Settings: 기상청 OpenAPI 키 추가

* :recycle:Refactor: 코드 포맷 적용

* ✨ Feat: tourAPI 연동을 통한 음성 가이드 기능

* :wrench:Settings: CodeRabbit 설정 파일 추가

* ✨ Feat: tourAPI 연동을 통한 음성 가이드 기능

* 🐛 Fix: 인코딩 오류 해결

* ♻️Refactor: 구현체로 구현받도록 구조 변경

* :wrench:Settings: 날씨 API 경로 추가

* :recycle:Refactor: 구현체로 구현받도록 구조 변경

* :recycle:Refactor: OpenAPI Secret key 변경

* :memo:Docks: 메소드 설명 주석 추가

* :wrench:Settings: OpenAPI Secret key 단일화

* :recycle:Refactor: 코드 포맷 적용

* ♻️ Refactor: Guide 구현체 구조 변경

* ♻️ Refactor: Guide 구현체 구조 변경

* ♻️ Refactor: Guide 응답 변수명 수정

* :sparkles:Feat: BaseTimeEntity 생성

* :sparkles:Feat: JpaAuditing 설정 추가

* :wrench:Settings: API Endpoint 추가

* :sparkles:Feat: Seal 도메인 생성

* ✨Feat: User 도메인 및 사용자 관련 기능 생성

* :heavy_plus_sign:Dependency: OAuth2 의존성 추가

* :wrench:Settings: OAuth2 Login 추가

* :sparkles:Feat: User 도메인 및 사용자 관련 기능 생성

* :recycle:Refactor: Login Response 추가

* :sparkles:Feat: OAuth2 서비스 로직 생성

* :wrench:Settings: OAuth2 환경변수 추가

* :recycle:Refactor: 코드
포맷 적용

* :wrench:Settings: User 도메인 엔드포인트 추가

* :recycle:Refactor: JWT 테스트 코드 수정

* :recycle:Refactor: 코드 포맷 적용

* :recycle:Refactor: Auth 테스트 코드 수정

* :recycle:Refactor: Auth 테스트 코드 수정

* :recycle:Refactor: RequestParam 어노테이션 추가

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* :recycle:Refactor: 코드 포맷 적용

* :recycle:Refactor: 코드 리뷰 기반 수정사항 반영

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* ✨Feat: Festival 도메인 및 지역 이름 기반 축제 조회 API 생성

* :sparkles:Feat: Festival 도메인 및 지역 이름 기반 축제 조회 API 생성

* :wrench:Settings: 관광정보 OpenAPI Host 추가

* :wrench:Settings: 서브모듈 업데이트

* :recycle:R